# confgr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
crates/autoconf_core/: Cargo.toml
crates/autoconf_derive/: Cargo.toml
crates/autoconf_derive/src/: config.rs  env.rs  file.rs  lib.rs  merge.rs
crates/confgr_core/: Cargo.toml
crates/confgr_core/src/: lib.rs
crates/confgr_derive/: Cargo.toml
crates/confgr_derive/src/: config.rs  convert.rs  env.rs  file.rs  lib.rs  merge.rs
src/: lib.rs  prelude.rs
tests/: all.rs  complex.rs  complex_settings.toml  config.toml  foreign.rs  nesting.rs  path.rs  priority.rs  separator.rs  seperator.rs  simple.rs  skipping.rs  test.env
tests/common/: config.toml  mod.rs
