[package]
description = "A simple rust application configuration derive macro."
name = "confgr"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/N4D1K-lgtm/confgr"
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
documentation = "https://docs.rs/confgr"
readme = "README.md"
keywords = ["configuration", "settings", "environment", "config"]
categories = ["config", "rust-patterns", "development-tools"]
homepage = "https://github.com/N4D1K-lgtm/confgr"

[dependencies]
confgr_derive = { path = "crates/confgr_derive", version = "0.2.0" }
confgr_core = { path = "crates/confgr_core", version = "0.2.0" }
config = "0.14.0"

[dev-dependencies]
smart-default = "0.7.1"
dotenv = "0.15.0"
serde = { version = "1.0.199", features = ["derive"] }
tempfile = "3.10.1"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/N4D1K-lgtm/confgr"
homepage = "https://github.com/N4D1K-lgtm/confgr"
authors = ["Kidan Nelson <nelsonkidan@gmail.com>"]
readme = "README.md"

[workspace.dependencies]
config = "0.14.0"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
