[package]
name = "confgr_derive"
description = "Procedural derive macro implementation for the confgr crate"
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
serde = { version = "1.0.198", features = ["derive"] }
syn = { version = "2.0.60", features = ["full"] }
config = { version = "0.14.0", features = ["toml"] }
quote = "1.0"
confgr_core = { path = "../confgr_core/", version = "0.1.1" }
