[package]
name = "confgr_derive"
description = "Procedural derive macro implementation for the confgr crate"
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0"
